<resources>
    <string name="app_name">AlphaSlateDemo</string>

    <string name="dashboard">dashboard</string>
    <string name="cart">cart</string>
    <string name="my_courses">my courses</string>
    <string name="exam">exam planner</string>
    <string name="more">more</string>
<string name="valid_till">Valid till:</string>
    <string name="settings">Settings</string>
    <string name="inprogress_text">In Progress</string>
    <string name="pending_text">Pending</string>
    <string name="completed_text">Completed</string>
    <string name="notify_text">notify</string>
    <string name="gradetext">Grade 7</string>

</resources>
