<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_cart"
        android:orderInCategory="100"
        android:icon="@drawable/cartac"
        android:iconTint="#ffff"

        android:title="@string/settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_send"
        android:orderInCategory="300"
        android:icon="@drawable/send"
        app:showAsAction="ifRoom"
        android:iconTint="#ffff"
        android:title="@string/cart"></item>


    <item
        android:id="@+id/action_notify"
        android:orderInCategory="300"
        android:iconTint="#ffff"
        android:title="@string/notify_text"
        android:icon="@drawable/notification"
        app:showAsAction="ifRoom"></item>



</menu>