<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardElevation="0dp"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
            <TextView
                android:id="@+id/parent_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/my_courses"
                android:textColor="@color/row_title_color"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnknownId" />

            <TextView
                android:id="@+id/item_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/gradetext"
                android:textColor="@color/row_title_color"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/parent_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/parent_item" />

</LinearLayout>
            <TextView
                android:id="@+id/item_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:gravity="left"
                android:text="@string/exam"
                android:textColor="@color/row_title_color"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintStart_toStartOf="@id/parent_item"
                app:layout_constraintTop_toBottomOf="@+id/item_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_10dp"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/valid_till"
                    android:textColor="@color/row_datetime_color"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/item_time"
                    app:layout_constraintTop_toBottomOf="@+id/item_time" />


                <TextView
                    android:id="@+id/item_progress"
                    android:layout_width="@dimen/btn_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:layout_weight="1"
                    android:background="@drawable/greenrectangle"
                    android:gravity="end"
                    android:text="@string/pending_text"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/row_title_color"

                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/item_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/item_date" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_child_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/item_date"></LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>





